--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>Teaching Activities</h2>
             <p style="text-align:left;">Pre-clinical Curriculum Teaching Assistant <span style="float:right;">2025</span></p>
             <p style="text-align:left;">Gastrointestinal Anatomy Teaching Assistant <span style="float:right;">2025</span></p>
-            <p style="text-align:left;">General Biology: Cellular and Molecular Lab Teaching Assistant <span style="float:right;">2021-2022</span></p>
+            <p style="text-align:left;">General Biology Lab Teaching Assistant <span style="float:right;">2021-2022</span></p>
             <p style="text-align:left;">Physiology Lab Teaching Assistant <span style="float:right;">2021</span></p>
         </div>
         <div class="research">
