--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <div class="education">
             <h2>Education</h2>
-            <p style="text-align:left;">M.D., University of Nebraska Medical Center, Omaha, NE <span style="float:right;">2022-2026</span></p>
-            <p style="text-align:left;">B.S. in Biology, Creighton Unviversity, Omaha, NE 2018-2022</p>
+            <p style="text-align:left;">M.D., University of Nebraska Medical Center <span style="float:right;">2022-2026</span></p>
+            <p style="text-align:left;">B.S. in Biology, Creighton Unviversity <span style="float:right;">2018-2022</span></p>
         </div>
         <div class="awards">
             <h2>Honors and Awards</h2>
